# rookmole

./: CMakeLists.txt  LICENSE
include/rookmole/: alphabeta.h  evaluation.h  rookmole.h  state.h
src/: alphabeta.cpp  evaluation.cpp  state.cpp
test/: CMakeLists.txt  play.rookmole.cpp  rookmole.test.cpp
